Add required JVM flags for a Docker env (#96)
Update Scala version

Add required JVM flags for a Docker deployed app

Simplify and correct how JVM flags are passed

Simplify and correct how JVM flags are passed

Add the required JVM flags for a docker env in the maven build